--- a/Practical/.vscode/settings.json
+++ b/Practical/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
+    "aacircle",
     "aaline",
     "blit",
-    "KEYDOWN"
+    "Checkpointer",
+    "KEYDOWN",
+    "NOFRAME"
   ],
   "python.analysis.typeCheckingMode": "basic"
 }
